--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,10 @@
     transition-duration: 500ms;
     transition-timing-function: cubic-bezier(0.390, 0.575, 0.565, 1.000);
   }
-
+@font-face{
+    font-family: "modelsignature";
+    src:url("/fonts/Modelistasignature-ownAV.otf") format("otf");
+}
 @font-face{
     font-family: 'theseasons';
     src:url("/fonts/Fontspring-DEMO-theseasons-reg.otf") format("otf");
